k8s.yaml
# 部署
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springclouddemo
spec:
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: springclouddemo
  replicas: 2
  template:
    metadata:
      labels:
        app: springclouddemo
    spec:
      imagePullSecrets:
        - name: registry-secret
      restartPolicy: Always
      containers:
        - name: springclouddemo
          image: harbor.lutfly.com/op/springclouddemo
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              path: /ping
#              port: 3000
#              scheme: HTTP
#            initialDelaySeconds: 60
#            periodSeconds: 5
#            successThreshold: 1
#            timeoutSeconds: 3
#          readinessProbe:
#            failureThreshold: 3
#            httpGet:
#              path: /ping
#              port: 3000
#              scheme: HTTP
#            initialDelaySeconds: 60
#            periodSeconds: 5
#            successThreshold: 1
#            timeoutSeconds: 3
---
# 服务
apiVersion: v1
kind: Service
metadata:
  name: springclouddemo
spec:
  selector:
    app: springclouddemo
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
# 路由
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: springclouddemo
spec:
  rules:
    - host: spring.lutfly.com
      http:
        paths:
          - path: /
            backend:
              serviceName: springclouddemo
              servicePort: 3000
